# VoxelEngine-Old

./: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
res/Shaders/: crosshairShader.vs  main.fs  main.vs
src/: Camera.cpp  Camera.hpp  main.cpp
src/Voxels/: VoxRenderer.cpp  VoxRenderer.hpp  Voxel.hpp
src/Voxels/Chunk/: Chunk.cpp  Chunk.hpp  Chunks.cpp  Chunks.hpp  ChunksController.cpp  ChunksController.hpp
src/graphics/: Mesh.cpp  Mesh.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp
src/window/: Events.hpp  Evevnts.cpp  Window.cpp  Window.hpp
